odin added some css

--- a/Foundations/Recipes/index.html
+++ b/Foundations/Recipes/index.html
@@ -5,15 +5,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-        <li><a href="recipes/VintageLemonade.html">
-                <h2>Vintage Lemonade</h2>
-            </a></li>
-    </ul>
+    <header class="class-title">
+        <h1>Odin Recipes</h1>
+    </header>
+    <main class="page-content">
+        <ol>
+            <li><span><a href="recipes/VintageLemonade/VintageLemonade.html">
+                        <h2>Vintage Lemonade</h2>
+                    </a></span></li>
+        </ol>
+    </main>
+    <footer>
+
+    </footer>
+
 
 </body>
 
