--- a/Foundations/Recipes/recipes/VintageLemonade/VintageLemonade.html
+++ b/Foundations/Recipes/recipes/VintageLemonade/VintageLemonade.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <h1>Vintage Lemonade</h1>
+    <h1 class="recipe-title">Vintage Lemonade</h1>
     <img src="https://www.allrecipes.com/thmb/JvrGxAcs9iRue_bp3nvDKAXfM30=/364x242/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/445156_Vintage-Lemonade-4x3-195c79927325479bb7848ece5cab897f.jpg"
         alt="">
     <h2>Description</h2>
