--- a/Foundations/LandingPage/index.html
+++ b/Foundations/LandingPage/index.html
@@ -19,7 +19,10 @@
         </div>
     </header>
     <main>
-        <div class="awesome"></div>
+        <div class="awesome">
+            This website is awesome
+            <div class="awesome-img">Placeholder image</div>
+        </div>
         <div class="random"></div>
         <div class="quote"></div>
         <div class="call-to-action"></div>
