--- a/Foundations/LandingPage/index.html
+++ b/Foundations/LandingPage/index.html
@@ -20,12 +20,53 @@
     </header>
     <main>
         <div class="awesome">
-            This website is awesome
+            <div class="text">
+                <h1>This website is awesome</h1>
+                <p>This website has some subtext that goes under the main title. Its a smaller font and the color is
+                    lower contrast.</p>
+
+            </div>
             <div class="awesome-img">Placeholder image</div>
         </div>
-        <div class="random"></div>
-        <div class="quote"></div>
-        <div class="call-to-action"></div>
+        <div class="random">
+            <h1>Some random information.</h1>
+            <div class="content-container">
+                <div class="content">
+                    <div class="content-img"></div>
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="content">
+                    <div class="content-img"></div>
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="content">
+                    <div class="content-img"></div>
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="content">
+                    <div class="content-img"></div>
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+
+            </div>
+        </div>
+        <div class="quote">
+            <div class="text">
+                <p class="quoteText">This is an inspiring quote, or a testimonial from a customer. Maybe it's just
+                    filling up space, or maybe people will actually read it. Who knows? All I know is that it looks
+                    nice.</p>
+                <p class="credit">- Thor, God of Thunder</p>
+            </div>
+        </div>
+        <div class="call-to-action">
+            <div class="banner">
+                <div class="text">
+                    <h1>Call to Action! It's time!</h1>
+                    <p>Sign up for our product by clicking that button right over there!</p>
+                </div>
+                <button>Sign Up</button>
+            </div>
+        </div>
     </main>
     <footer>
 
